--- a/frontend/src/styles/ChannelPage.css
+++ b/frontend/src/styles/ChannelPage.css
@@ -52,3 +52,33 @@ input {
     cursor: pointer;
     border-radius: 5px;
 }
+
+.channel-button {
+    display: block;
+    width: 100%;
+    padding: 10px;
+    text-align: center;
+    background-color: #007bff;
+    color: white;
+    text-decoration: none;
+    border-radius: 5px;
+    margin-bottom: 5px;
+}
+
+.channel-button:hover {
+    background-color: #0056b3;
+}
+
+.sidebar ul {
+    list-style: none; 
+    padding: 0;
+    margin-right: 10%; 
+    text-align: left; 
+}
+
+.user-item{
+    padding: 2px 4px;
+    margin: 2px;
+    border: 1px solid black;
+    border-radius: 10px;
+}
