--- a/frontend/src/styles/ChannelPage.css
+++ b/frontend/src/styles/ChannelPage.css
@@ -126,7 +126,7 @@ button {
   border-radius: 0 50px 50px 0;
   border: none;
   font-size: 1.2rem;
-  text-align: center;
+  text-align: left;
   color: black;
   text-decoration: none;
   background-color: white;
